# go_dart_twirp_example

./: .gitignore  BUILD  BUILD.twirp.bzl  Gopkg.toml  Makefile  README.md  WORKSPACE  curl_test.sh  main.go
books/: BUILD  books_service.proto
cmd/client/: BUILD.bazel  main.go
internal/haberdasherserver/: BUILD.bazel  server.go
rpc/haberdasher/: BUILD.bazel  WORKSPACE  service.pb.go  service.proto
src/: BUILD  WORKSPACE
