load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/johnpryan/go_dart_twirp_example/cmd/client",
    visibility = ["//visibility:private"],
    deps = ["//rpc/haberdasher:go_default_library"],
)

go_binary(
    name = "client",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
