load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["server.go"],
    importpath = "github.com/johnpryan/go_dart_twirp_example/internal/haberdasherserver",
    visibility = ["//:__subpackages__"],
    deps = [
        "//rpc/haberdasher:go_default_library",
        "//vendor/github.com/twitchtv/twirp:go_default_library",
    ],
)
