load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "haberdasher_go_proto",
    srcs = [
        "service.pb.go",
        "service.twirp.go",
    ],
    importpath = "github.com/johnpryan/go_dart_twirp_example/rpc/haberdasher",
    visibility = ["//visibility:public"],
    deps = [
        "//vendor/github.com/golang/protobuf/jsonpb:go_default_library",
        "//vendor/github.com/golang/protobuf/proto:go_default_library",
        "//vendor/github.com/twitchtv/twirp:go_default_library",
        "//vendor/github.com/twitchtv/twirp/ctxsetters:go_default_library",
    ],
    compilers = [
        "@io_bazel_rules_go//proto:go_proto",
    ],
)
