load("@io_bazel_rules_go//proto:compiler.bzl", "go_proto_compiler")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "haberdasher_proto",
    srcs = [
        "service.proto",
    ],
    visibility = ["//visibility:public"],
    deps = [],
)

go_proto_library(
    name = "go_default_library",
    importpath = "github.com/johnpryan/go_dart_twirp_example/rpc/haberdasher",
    proto = ":haberdasher_proto",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_twitchtv_twirp//protoc-gen-twirp:go_default_library",
    ],
    compilers = [
        "twirp_library",
    ],
)

go_proto_compiler(
    name = "go_twirp",
    options = ["plugins=twirp"],
    visibility = ["//visibility:public"],
    plugin = "@com_github_twitchtv_twirp//protoc-gen-twirp:protoc-gen-twirp",
)
